# AZFT-MPC

./: .gitignore  A.date  B.data  B.date  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  Merkle_Hash.cpp  Merkle_Hash.h  README.html  README.md  _file_deal.cpp  cmake_install.cmake  code_gen  code_mac.code  compile.sh  config.h  file_deal  kernels  key.data.ban  main  main.cpp  make_date.cpp  net  network.c  network.cpp  network.h  output.html  protocol.cpp  protocol.h  server.c  some_struct.h  staore_file  store_file  test  test_cal  test_component  test_ex  tool.cpp  (+1 more)
HW/: .~通用安全密码算法的软实现接口说明 (1).doc  CMakeLists.txt  Makefile  SG_API.h  a.out  cmake_install.cmake  crypto.cpp  crypto.h  crypto_pend.cpp  hw_head.cpp  libtee_internal.so.1.0  tee.cpp  truple.cpp  tuple.cpp  tuple_c.c  基于通用安全密码算法的软实现接口说明 (1).doc
HW/Link_TEE_CAP_SDK_Trial_x86/: tee_act_app
HW/Link_TEE_CAP_SDK_Trial_x86/apps/hardware/inc/: hardware.h
HW/Link_TEE_CAP_SDK_Trial_x86/apps/hardware/tw/: hardware_ta.c
HW/Link_TEE_CAP_SDK_Trial_x86/apps/sst/inc/: sst.h
HW/Link_TEE_CAP_SDK_Trial_x86/apps/sst/ntw/: .ca_sst.c.swp  Makefile  ca_sst.c  ca_sst.h
HW/Link_TEE_CAP_SDK_Trial_x86/apps/sst/tw/: ta_sst.c
HW/Link_TEE_CAP_SDK_Trial_x86/apps/xor/inc/: element.h  tuple_c.h  xor.h
HW/Link_TEE_CAP_SDK_Trial_x86/ntw/inc/: tee_client_api.h  tee_types.h
HW/Link_TEE_CAP_SDK_Trial_x86/tw/: Makefile  build_ta.sh
HW/Link_TEE_CAP_SDK_Trial_x86/tw/inc/: element.h  tee_internal_api.h  tee_internal_api_ext.h  tee_srv.h  tee_types.h  tuple_c.h
HW/Link_TEE_CAP_SDK_Trial_x86/tw/src/: tee_srv_table.c
HW/include/: SG_API.h  crypto.h  crypto_pend.h  hw_head.h  tee.h  truple.h  tuple.h  tuple_c.h
compiler/Protocols_Analysis/src/mixedProtocolsAnalysis/: Main.java
compiler/sootOutput/: P.jimple
include/: Merkle_Hash.h  component.h  config.h  model.h  network.h  protocol.h  some_struct.h  tool.h
install_tool/: .install.sh.swp  install.sh
install_tool/jsoncpp-src-0.5.0/buildscons/linux-gcc-7/: .sconsign.dbm.dblite
install_tool/jsoncpp-src-0.6.0-rc2/: support_nul_characters.patch
install_tool/jsoncpp-src-0.6.0-rc2/buildscons/linux-gcc-7/: .sconsign.dbm.dblite
install_tool/jsoncpp-src-0.6.0-rc2/include/json/: value.h  value.h.rej  writer.h.rej
install_tool/jsoncpp-src-0.6.0-rc2/src/lib_json/: json_tool.h  json_value.cpp  json_writer.cpp
java_code_demo/mexp/: P.java
lib/: libtee_internal.so.1.0
protocol_file/: 1_100.jimple  T.jimple  dot.jimple  org.jimple  org2.jimple  org_cp2.jimple  orgin.jimple  tworoundbid.jimple
protocol_file/programs/1to100/: P.java  P.jimple
protocol_file/programs/biometric/: P.jimple
protocol_file/programs/cryptonets/: ._P.jimple  P.jimple
protocol_file/programs/histogram/: P.jimple
protocol_file/programs/kmeans/: ._P.java
protocol_file/programs/mexp/: P.jimple
protocol_file/programs/mnist/: P.jimple
protocol_file/programs/mul/: P.jimple
protocol_file/programs/playground/: P.jimple
protocol_file/programs/psi/: P.jimple
protocol_file/programs/tworoundbid/: P.java  P.jimple
sm-algo-test/: main.c  基于通用安全密码算法的软实现接口说明.doc
sootOutput/: MPCAnnotation.jimple  MPCAnnotationImpl.jimple  P.jimple
src/: Merkle_Hash.cpp  _make_date.cpp  component.cpp  main.cpp  model.cpp  network.cpp  protocol.cpp  tool.cpp
test/: cal_plain.cpp  compiler.cpp  gen_code.cpp  test.cpp  test__component.cpp
tst/86754231dbcafdec1021324354657687/: ._.2756d6f64756f5369607865627f5b65697.integ  ._.2756d6f64756f5379676e6f5b65697.integ  ._.369607865627f5b65697.integ  ._.379676e6f5b65697.integ  .f62776f5b65697.integ  .f62776f5b65697f5d61636.integ
(+35 files in other folders)
